Updated Links Preview

--- a/index.html
+++ b/index.html
@@ -153,13 +153,13 @@
 												<span class="value"><a href="mailto:umarfoo@yahoo.com">umarfoo@yahoo.com</a></span>
 											</li>
 											<li>
-												<span class="title">Github : </span><span class="value"><a href="https://github.com/Umarfoo">Umarfoo</a></span>
+												<span class="title">Github : </span><span class="value"><a href="https://github.com/Umarfoo" target="_blank">Umarfoo</a></span>
 											</li>
 											<li>
 												<span class="title">Experience : </span><span class="value">6 years</span>
 											</li>
 											<li>
-												<span class="title">LinkedIn : </span><span class="value"><a href="https://www.linkedin.com/in/umarfoo/">Umarfoo</a></span>
+												<span class="title">LinkedIn : </span><span class="value"><a href="https://www.linkedin.com/in/umarfoo/" target="_blank">Umarfoo</a></span>
 											</li>
 											<li>
 												<span class="title">Address :</span>
@@ -1045,10 +1045,10 @@
 								<div class="social-link">
 									<ul class="wrap justify-content-center">
 										<li class="wow fadeInUp">
-											<a href="https://github.com/Umarfoo"><i class="fab fa-github"></i></a>
+											<a href="https://github.com/Umarfoo" target="_blank"><i class="fab fa-github"></i></a>
 										</li>
 										<li class="wow fadeInUp">
-											<a href="https://www.linkedin.com/in/umarfoo"><i class="fab fa-linkedin-in"></i></a>
+											<a href="https://www.linkedin.com/in/umarfoo" target="_blank"><i class="fab fa-linkedin-in"></i></a>
 										</li>
 									</ul>
 								</div>
