--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title> Icard - Personal Portfolio </title>
+	<title> Umar Farooq - Personal Portfolio </title>
+	<meta name="title" content="Umar Farooq - Personal Portfolio">
+	<meta name="description" content="Personal website with resume, project details, skills highlighted, recommendations and contact information.">
+	<meta property="og:title" content="Umar Farooq - Personal Portfolio">
+	<meta property="og:description" content="Personal website with resume, project details, skills highlighted, recommendations and contact information.">
+	<meta property="og:image" src="assets/images/Umar_Farooq_PortFolio_Image.jpg">
+	<meta property="og:url" content="https://umarfoo.github.io">
 	<!-- favicon -->
 	<link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
 	<!-- animate css -->
@@ -837,112 +843,116 @@
 						<div class="project-gallery-filter d-flex justify-content-center">
 							<ul class="project-gallery-menu d-inline-block">
 								<li class="filter active" data-filter="all">All</li>
-								<li class="filter" data-filter=".cat-1">Marketing</li>
-								<li class="filter" data-filter=".cat-2">Management</li>
-								<li class="filter" data-filter=".cat-3">Consulting</li>
+								<li class="filter" data-filter=".cat-1">Excel & VBA</li>
+								<li class="filter" data-filter=".cat-2">Python</li>
+								<li class="filter" data-filter=".cat-3">JavaScript</li>
+								<li class="filter" data-filter=".cat-4">HTML & CSS</li>
+								<li class="filter" data-filter=".cat-5">SQL</li>
+								<li class="filter" data-filter=".cat-6">Tableau</li>
+								<li class="filter" data-filter=".cat-7">Wordpress</li>
 							</ul>
 						</div>
 						<div class="row project-gallery-item">
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-1 cat-3">
+							<div class="mix col-md-6 col-lg-4 gallery-item cat-1">
 								<a href="ajax/portfolio-ajax-project-1.html" class="gallery-item-content pp">
 									<div  class="item-thumbnail">
-										<img src="assets/images/1.jpg" alt="">
+										<img src="assets/images/Kickstarter_Main.jpg" alt="">
 										<div class="content-overlay">
 											<div class="content">
 												<h4 class="project-title">
-													Project Title
+													Kickstarter Analysis
 												</h4>
-												<span class="project-category">Marketing</span>
+												<span class="project-category">Excel</span>
 											</div>
 										</div>
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item  cat-3 cat-4">
+							<div class="mix col-md-6 col-lg-4 gallery-item  cat-1">
 								<a href="ajax/portfolio-ajax-project-2.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
-										<img src="assets/images/2.jpg" alt="">
+										<img src="assets/images/Stock_Market_Main.jpg" alt="">
 										<div class="content-overlay">
 											<div class="content">
 												<h4 class="project-title">
-													Project Title
+													Stock Market Analysis
 												</h4>
-												<span class="project-category">Marketing</span>
+												<span class="project-category">Excel & VBA</span>
 											</div>
 										</div>
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-2 cat-1">
+							<div class="mix col-md-6 col-lg-4 gallery-item cat-2">
 								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
-										<img src="assets/images/3.jpg" alt="">
+										<img src="assets/images/NBA_Main.jpg" alt="">
 										<div class="content-overlay">
 											<div class="content">
 												<h4 class="project-title">
-													Project Title
+													NBA 2020 Winners/Losers Predictions
 												</h4>
-												<span class="project-category">Marketing</span>
+												<span class="project-category">Python</span>
 											</div>
 										</div>
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-1 cat-3">
+							<div class="mix col-md-6 col-lg-4 gallery-item cat-2 cat-5 cat-4">
 								<a href="ajax/portfolio-ajax-project-1.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
-										<img src="assets/images/4.jpg" alt="">
+										<img src="assets/images/Tesla_ETL_main.jpg" alt="">
 										<div class="content-overlay">
 											<div class="content">
 												<h4 class="project-title">
-													Project Title
+													Tesla Stock & Elon Musk Tweets ETL
 												</h4>
-												<span class="project-category">Marketing</span>
+												<span class="project-category">Python, SQL, HTML & CSS</span>
 											</div>
 										</div>
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-3 cat-4">
+							<div class="mix col-md-6 col-lg-4 gallery-item cat-2 cat-3 cat-4 cat-5">
 								<a href="ajax/portfolio-ajax-project-2.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
-										<img src="assets/images/5.jpg" alt="">
+										<img src="assets/images/Fire_main.jpg" alt="">
 										<div class="content-overlay">
 											<div class="content">
 												<h4 class="project-title">
-													Project Title
+													Analysing US Land fires between 2013 - 2017
 												</h4>
-												<span class="project-category">Marketing</span>
+												<span class="project-category">Python, JavaScript, SQL, HTML & CSS</span>
 											</div>
 										</div>
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-1 cat-2">
+							<div class="mix col-md-6 col-lg-4 gallery-item cat-1 cat-2 cat-3 cat-4 cat-5 cat-6">
 								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
-										<img src="assets/images/6.jpg" alt="">
+										<img src="assets/images/billboard_main.jpg" alt="">
 										<div class="content-overlay">
 											<div class="content">
 												<h4 class="project-title">
-													Project Title
+													Billboard Top 100 Artists Dashboard & Analysis<br>(1999 - 2019)
 												</h4>
-												<span class="project-category">Marketing</span>
+												<span class="project-category">Python, JavaScript, SQL, Tableau,<br>VBA, Machine Learning, HTML & CSS</span>
 											</div>
 										</div>
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-4 cat-2">
+							<div class="mix col-md-6 col-lg-4 gallery-item cat-2">
 								<a href="ajax/portfolio-ajax-project-1.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
-										<img src="assets/images/7.jpg" alt="">
+										<img src="assets/images/election_main.jpg" alt="">
 										<div class="content-overlay">
 											<div class="content">
 												<h4 class="project-title">
-													Project Title
+													Bank Profits and Election Polls Calculations
 												</h4>
-												<span class="project-category">Marketing</span>
+												<span class="project-category">Python</span>
 											</div>
 										</div>
 									</div>
