--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="description" content="Personal website with resume, project details, skills highlighted, recommendations and contact information.">
 	<meta property="og:title" content="Umar Farooq - Personal Portfolio">
 	<meta property="og:description" content="Personal website with resume, project details, skills highlighted, recommendations and contact information.">
-	<meta property="og:image" src="assets/images/Umar_Farooq_PortFolio_Image.jpg">
+	<meta property="og:image" content="https://umarfoo.github.io/assets/images/Umar_Farooq_PortFolio_Image.jpg">
 	<meta property="og:url" content="https://umarfoo.github.io">
 	<!-- favicon -->
 	<link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
