--- a/index.html
+++ b/index.html
@@ -847,7 +847,7 @@
 								<li class="filter" data-filter=".cat-2">Python</li>
 								<li class="filter" data-filter=".cat-3">JavaScript</li>
 								<li class="filter" data-filter=".cat-4">HTML & CSS</li>
-								<li class="filter" data-filter=".cat-5">SQL</li>
+								<li class="filter" data-filter=".cat-5">SQL & NoSQL</li>
 								<li class="filter" data-filter=".cat-6">Tableau</li>
 								<li class="filter" data-filter=".cat-7">Wordpress</li>
 							</ul>
@@ -958,31 +958,76 @@
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-3 cat-2">
+							<div class="mix col-md-6 col-lg-4 gallery-item cat-2">
 								<a href="ajax/portfolio-ajax-project-2.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
-										<img src="assets/images/8.jpg" alt="">
+										<img src="assets/images/video_game_main.jpg" alt="">
 										<div class="content-overlay">
 											<div class="content">
 												<h4 class="project-title">
-													Project Title
+													Video Game Data Analysis
 												</h4>
-												<span class="project-category">Marketing</span>
+												<span class="project-category">Python</span>
 											</div>
 										</div>
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-3 cat-1">
+							<div class="mix col-md-6 col-lg-4 gallery-item cat-2">
 								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
-										<img src="assets/images/9.jpg" alt="">
+										<img src="assets/images/pharma_main.jpg" alt="">
 										<div class="content-overlay">
 											<div class="content">
 												<h4 class="project-title">
-													Project Title
+													Pharmaceutical Data Analysis
 												</h4>
-												<span class="project-category">Marketing</span>
+												<span class="project-category">Python</span>
+											</div>
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="mix col-md-6 col-lg-4 gallery-item cat-2">
+								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
+									<div class="item-thumbnail">
+										<img src="assets/images/vacation_main.jpg" alt="">
+										<div class="content-overlay">
+											<div class="content">
+												<h4 class="project-title">
+													Weather and Vacation Analysis
+												</h4>
+												<span class="project-category">Python</span>
+											</div>
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="mix col-md-6 col-lg-4 gallery-item cat-2 cat-4 cat-5">
+								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
+									<div class="item-thumbnail">
+										<img src="assets/images/mars_main.jpg" alt="">
+										<div class="content-overlay">
+											<div class="content">
+												<h4 class="project-title">
+													Web Scraping - Mission to Mars Website
+												</h4>
+												<span class="project-category">Python, MongoDB, HTML & CSS</span>
+											</div>
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="mix col-md-6 col-lg-4 gallery-item cat-2 cat-5">
+								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
+									<div class="item-thumbnail">
+										<img src="assets/images/employees_main.jpg" alt="">
+										<div class="content-overlay">
+											<div class="content">
+												<h4 class="project-title">
+													Employees Database Connection and Management
+												</h4>
+												<span class="project-category">Python & SQL</span>
 											</div>
 										</div>
 									</div>
