--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="title" content="Umar Farooq - Personal Portfolio">
 	<meta name="description" content="Personal website with resume, project details, skills highlighted, recommendations and contact information.">
 	<meta property="og:title" content="Umar Farooq - Personal Portfolio">
-	<meta property="og:description" content="Personal website with resume, project details, skills highlighted, recommendations and contact information.">
+	<meta property="og:description" content="Personal website with resume, projects, skills, recommendations and contact information.">
 	<meta property="og:image" content="https://umarfoo.github.io/assets/images/Umar_Farooq_PortFolio_Image.jpg">
 	<meta property="og:url" content="https://umarfoo.github.io">
 	<!-- favicon -->
@@ -81,7 +81,7 @@
 					<div class="row">
 						<div class="col-lg-6">
 							<div class="main-profile-image">
-								<img src="assets/images/umar_farooq.jpg" alt="">
+								<img src="assets/images/umar2.jpg" alt="">
 							</div>
 						</div>
 						<div class="col-lg-6  align-self-center">
@@ -405,7 +405,8 @@
 							</div>
 							<div class="content">
 								<p>
-									Umar Farooq has been an excellent resource for our organization. He is creative and have good analytical skills as well. He knows the digital marketing world and understand its dynamics well. He was working on our few projects and had proved himself to be a valuable asset by adding value to our company's projects. He will always go an extra mile to get the job done.
+									Umar Farooq has been an excellent resource for our organization. He is creative and have good analytical skills as well.
+									He knows the digital marketing world and understand its dynamics well. He was working on our few projects and had proved himself to be a great asset by adding value to our company's projects. He will always go an extra mile to get the job done.
 								</p>
 							</div>
 						</div>
@@ -470,7 +471,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-6">
+					<!-- <div class="col-lg-4 col-md-6">
 						<div class="single-review">
 							<div class="reviewr">
 								<div class="img">
@@ -499,7 +500,7 @@
 								</p>
 							</div>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 
@@ -522,7 +523,7 @@
 					<div class="col-lg-12">
 						<div class="about-box">
 							<div class="row">
-								<div class="col-lg-6 d-flex align-self-center">
+								<div class="col-lg-12 d-flex align-self-center justify-content-center">
 									<div class="about-content">
 										<a href="assets/images/Umar Farooq Resume Finalized.pdf" target="_blank" class="mybtn mybtn-bg"> <span><i class="fas fa-download"></i>Download My CV</span> </a>
 									</div>
@@ -545,7 +546,17 @@
 									<div class="single-skill">
 										<div class="label">
 											<span>CSS</span>
-											<span>90%</span>
+											<!-- <span>85%</span> -->
+										</div>
+										<div class="progress">
+											<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+												aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
+										</div>
+									</div>
+									<div class="single-skill">
+										<div class="label">
+											<span>HTML5</span>
+											<!-- <span>90%</span> -->
 										</div>
 										<div class="progress">
 											<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
@@ -554,47 +565,8 @@
 									</div>
 									<div class="single-skill">
 										<div class="label">
-											<span>HTML5</span>
-											<span>95%</span>
-										</div>
-										<div class="progress">
-											<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-												aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%"></div>
-										</div>
-									</div>
-									<div class="single-skill">
-										<div class="label">
 											<span>Python</span>
-											<span>80%</span>
-										</div>
-										<div class="progress">
-											<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-												aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
-										</div>
-									</div>
-									<div class="single-skill">
-										<div class="label">
-											<span>JavaScript</span>
-											<span>85%</span>
-										</div>
-										<div class="progress">
-											<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-												aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-6 skill-area-line">
-							<div class="skill-box">
-								<h4 class="title">
-									Other Coding Skills
-								</h4>
-								<div class="skill-list">
-									<div class="single-skill">
-										<div class="label">
-											<span>SQL</span>
-											<span>75%</span>
+											<!-- <span>75%</span> -->
 										</div>
 										<div class="progress">
 											<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
@@ -603,8 +575,37 @@
 									</div>
 									<div class="single-skill">
 										<div class="label">
+											<span>JavaScript</span>
+											<!-- <span>70%</span> -->
+										</div>
+										<div class="progress">
+											<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+												aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-6 skill-area-line">
+							<div class="skill-box">
+								<h4 class="title">
+									Data Skills
+								</h4>
+								<div class="skill-list">
+									<div class="single-skill">
+										<div class="label">
+											<span>SQL</span>
+											<!-- <span>65%</span> -->
+										</div>
+										<div class="progress">
+											<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+												aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%"></div>
+										</div>
+									</div>
+									<div class="single-skill">
+										<div class="label">
 											<span>Tableau</span>
-											<span>80%</span>
+											<!-- <span>80%</span> -->
 										</div>
 										<div class="progress">
 											<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
@@ -614,7 +615,7 @@
 									<div class="single-skill">
 										<div class="label">
 											<span>Excel</span>
-											<span>95%</span>
+											<!-- <span>95%</span> -->
 										</div>
 										<div class="progress">
 											<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
@@ -624,11 +625,11 @@
 									<div class="single-skill">
 										<div class="label">
 											<span>VBA</span>
-											<span>90%</span>
+											<!-- <span>70%</span> -->
 										</div>
 										<div class="progress">
 											<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-												aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+												aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
 										</div>
 									</div>
 								</div>
@@ -641,28 +642,28 @@
 								</h4>
 								<div class="skill-list">
 									<div class="single-skill">
-										<div class="progress-circle position" data-percent="85" data-duration="1000"
+										<div class="progress-circle position" data-percent="70" data-duration="10000"
 											data-color="#e9ecef, 304CFD"></div>
 										<div class="label mt-1 d-block text-center">
 											<span>ETL</span>
 										</div>
 									</div>
 									<div class="single-skill">
-										<div class="progress-circle position" data-percent="90" data-duration="1000"
+										<div class="progress-circle position" data-percent="85" data-duration="10000"
 											data-color="#e9ecef, 304CFD"></div>
 										<div class="label mt-1 d-block text-center">
 											<span>Web Devlopment</span>
 										</div>
 									</div>
 									<div class="single-skill">
-										<div class="progress-circle position" data-percent="85" data-duration="1000"
+										<div class="progress-circle position" data-percent="75" data-duration="10000"
 											data-color="#e9ecef, 304CFD"></div>
 										<div class="label mt-1 d-block text-center">
 											<span>Data Analysis</span>
 										</div>
 									</div>
 									<div class="single-skill">
-										<div class="progress-circle position" data-percent="80" data-duration="1000"
+										<div class="progress-circle position" data-percent="80" data-duration="10000"
 											data-color="#e9ecef, 304CFD"></div>
 										<div class="label mt-1 d-block text-center">
 											<span>Data Visualisation</span>
@@ -674,7 +675,7 @@
 						<div class="col-lg-6 skill-area-circle">
 							<div class="skill-box">
 								<h4 class="title">
-									Basic Knowledge
+									Working Knowledge
 								</h4>
 								<div class="skill-list">
 									<ul class="single-list-ul">
@@ -697,7 +698,7 @@
 											<p>PostgreSQL & MongoDB</p>
 										</li>
 										<li>
-											<p>Pandas, Matplotlib, SQLalchemy, Flask</p>
+											<p class="mb-4">Pandas, Matplotlib, SQLalchemy, Flask</p>
 										</li>
 									</ul>
 								</div>
@@ -1012,7 +1013,7 @@
 												<h4 class="project-title">
 													Web Scraping - Mission to Mars Website
 												</h4>
-												<span class="project-category">Python, MongoDB, HTML & CSS</span>
+												<span class="project-category">Python, NoSQL, HTML & CSS</span>
 											</div>
 										</div>
 									</div>
@@ -1028,6 +1029,111 @@
 													Employees Database Connection and Management
 												</h4>
 												<span class="project-category">Python & SQL</span>
+											</div>
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="mix col-md-6 col-lg-4 gallery-item cat-2 cat-5">
+								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
+									<div class="item-thumbnail">
+										<img src="assets/images/climate_main.jpg" alt="">
+										<div class="content-overlay">
+											<div class="content">
+												<h4 class="project-title">
+													Climate Analysis & API Development
+												</h4>
+												<span class="project-category">Python & SQL</span>
+											</div>
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="mix col-md-6 col-lg-4 gallery-item cat-4">
+								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
+									<div class="item-thumbnail">
+										<img src="assets/images/temp_web_main.jpg" alt="">
+										<div class="content-overlay">
+											<div class="content">
+												<h4 class="project-title">
+													Temperature vs Latitude Dashboard
+												</h4>
+												<span class="project-category">HTML & CSS</span>
+											</div>
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="mix col-md-6 col-lg-4 gallery-item cat-3 cat-4">
+								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
+									<div class="item-thumbnail">
+										<img src="assets/images/et_main.jpg" alt="">
+										<div class="content-overlay">
+											<div class="content">
+												<h4 class="project-title">
+													Extra-Terrestrial Dataset Table Filters
+												</h4>
+												<span class="project-category">JavaScript, HTML & CSS</span>
+											</div>
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="mix col-md-6 col-lg-4 gallery-item cat-3 cat-4">
+								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
+									<div class="item-thumbnail">
+										<img src="assets/images/belly_main.jpg" alt="">
+										<div class="content-overlay">
+											<div class="content">
+												<h4 class="project-title">
+													Belly Button Biodiversity Data Visualisation
+												</h4>
+												<span class="project-category">JavaScript, HTML & CSS</span>
+											</div>
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="mix col-md-6 col-lg-4 gallery-item cat-3 cat-4">
+								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
+									<div class="item-thumbnail">
+										<img src="assets/images/risk_main.jpg" alt="">
+										<div class="content-overlay">
+											<div class="content">
+												<h4 class="project-title">
+													US States Risk Factors Interactive Scatter Plot
+												</h4>
+												<span class="project-category">JavaScript, HTML & CSS</span>
+											</div>
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="mix col-md-6 col-lg-4 gallery-item cat-3 cat-4">
+								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
+									<div class="item-thumbnail">
+										<img src="assets/images/earthquake_main.jpg" alt="">
+										<div class="content-overlay">
+											<div class="content">
+												<h4 class="project-title">
+													Earthquake Geo Mapping
+												</h4>
+												<span class="project-category">JavaScript, HTML & CSS</span>
+											</div>
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="mix col-md-6 col-lg-4 gallery-item cat-6">
+								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
+									<div class="item-thumbnail">
+										<img src="assets/images/citi_bike_main.jpg" alt="">
+										<div class="content-overlay">
+											<div class="content">
+												<h4 class="project-title">
+													New York - Citi Bike Trips <br> Data Analysis 2020
+												</h4>
+												<span class="project-category">Tableau</span>
 											</div>
 										</div>
 									</div>
