--- a/index.html
+++ b/index.html
@@ -1139,6 +1139,81 @@
 									</div>
 								</a>
 							</div>
+							<div class="mix col-md-6 col-lg-4 gallery-item cat-4 cat-7">
+								<a href="http://inflics.com/" target="_blank" class="gallery-item-content">
+									<div class="item-thumbnail">
+										<img src="assets/images/inflics_main.jpg" alt="">
+										<div class="content-overlay">
+											<div class="content">
+												<h4 class="project-title">
+													Inflics.com
+												</h4>
+												<span class="project-category">Wordpress, HTML & CSS</span>
+											</div>
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="mix col-md-6 col-lg-4 gallery-item cat-4 cat-7">
+								<a href="http://advent-marine.com/" target="_blank" class="gallery-item-content">
+									<div class="item-thumbnail">
+										<img src="assets/images/advent_main.jpg" alt="">
+										<div class="content-overlay">
+											<div class="content">
+												<h4 class="project-title">
+													Advent-marine.com
+												</h4>
+												<span class="project-category">Wordpress, HTML & CSS</span>
+											</div>
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="mix col-md-6 col-lg-4 gallery-item cat-4 cat-7">
+								<a href="http://smartship.solutions/" target="_blank" class="gallery-item-content">
+									<div class="item-thumbnail">
+										<img src="assets/images/smartship_main.jpg" alt="">
+										<div class="content-overlay">
+											<div class="content">
+												<h4 class="project-title">
+													smartship.solutions
+												</h4>
+												<span class="project-category">Wordpress, HTML & CSS</span>
+											</div>
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="mix col-md-6 col-lg-4 gallery-item cat-4 cat-7">
+								<a href="http://iffihairarts.com/" target="_blank" class="gallery-item-content">
+									<div class="item-thumbnail">
+										<img src="assets/images/iffi_main.jpg" alt="">
+										<div class="content-overlay">
+											<div class="content">
+												<h4 class="project-title">
+													iffihairarts.com
+												</h4>
+												<span class="project-category">Wordpress, HTML & CSS</span>
+											</div>
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="mix col-md-6 col-lg-4 gallery-item cat-4 cat-7">
+								<a href="http://essrafi.com/" target="_blank" class="gallery-item-content">
+									<div class="item-thumbnail">
+										<img src="assets/images/essrafi_main.jpg" alt="">
+										<div class="content-overlay">
+											<div class="content">
+												<h4 class="project-title">
+													essrafi.com
+												</h4>
+												<span class="project-category">Wordpress, HTML & CSS</span>
+											</div>
+										</div>
+									</div>
+								</a>
+							</div>
 						</div>
 					</div>
 				</div>
