--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
 											<p>R, Leaflet.js, D3.js, Plotly.js</p>
 										</li>
 										<li>
-											<p>Machine Learning - Tensorflow</p>
+											<p>Machine Learning - Tensorflow, KNN Classification</p>
 										</li>
 										<li>
 											<p>Big Data - PySpark</p>
