--- a/ajax/portfolio-ajax-billboard_dashboard.html
+++ b/ajax/portfolio-ajax-billboard_dashboard.html
@@ -28,13 +28,17 @@
           <span>Technologies:</span>Python, JavaScript, SQL, Tableau, VBA, Tensorflow, KNN Classification, HTML & CSS
         </li>
         <li>
+          <span>Libraries:</span>D3.js, Pandas, Tensorflow, KNN Classification, Plotly, Flask, SQL Alchemy
+        </li>
+        <li>
           <span>Date:</span>Oct 8, 2020
         </li>
         <li>
-          <span>Deployed Website URL:</span><a href="https://billboard-top-100.herokuapp.com/" target="_blank">billboard-top-100.herokuapp.com</a>
+          <a href="https://billboard-top-100.herokuapp.com/" target="_blank">WEBSITE</a>
+          <a href="https://github.com/Umarfoo/BillBoard_Top_100_Artist_Dashboard" target="_blank">GITHUB</a>
         </li>
         <li>
-          <span>Github URL:</span><a href="https://github.com/Umarfoo/BillBoard_Top_100_Artist_Dashboard" target="_blank">github.com/Umarfoo/BillBoard_Top_100_Artist_Dashboard</a>
+          <a href="https://github.com/Umarfoo/BillBoard_Top_100_Artist_Dashboard" target="_blank">GITHUB</a>
         </li>
       </ul>
       </div>
