--- a/ajax/portfolio-ajax-billboard_dashboard.html
+++ b/ajax/portfolio-ajax-billboard_dashboard.html
@@ -34,11 +34,8 @@
           <span>Date:</span>Oct 8, 2020
         </li>
         <li>
-          <a href="https://billboard-top-100.herokuapp.com/" target="_blank">WEBSITE</a>
-          <a href="https://github.com/Umarfoo/BillBoard_Top_100_Artist_Dashboard" target="_blank">GITHUB</a>
-        </li>
-        <li>
-          <a href="https://github.com/Umarfoo/BillBoard_Top_100_Artist_Dashboard" target="_blank">GITHUB</a>
+          <span><a href="https://billboard-top-100.herokuapp.com/" target="_blank">WEBSITE</a></span>
+          <span><a href="https://github.com/Umarfoo/BillBoard_Top_100_Artist_Dashboard" target="_blank">GITHUB</a></span>
         </li>
       </ul>
       </div>
