--- a/ajax/portfolio-ajax-billboard_dashboard.html
+++ b/ajax/portfolio-ajax-billboard_dashboard.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-lg-12">
       <div class="header-area">
-        <h3 class="project-title">Web Design</h3>
+        <h3 class="project-title">BillBoard Top 100 Artist Dashboard & Analysis (1999 - 2019)</h3>
       </div>
     </div>
   </div>
