--- a/index.html
+++ b/index.html
@@ -1255,7 +1255,7 @@
 							</div>
 							<div class="info-content">
 								<h5>Phone Number</h5>
-								<p>+1 512 367 9001</p>
+								<a href="tel:+15123679001">+1 512 367 9001</a>
 							</div>
 
 						</div>
@@ -1269,7 +1269,7 @@
 							</div>
 							<div class="info-contentr">
 								<h5>Email Address</h5>
-								<p>umarfoo@yahoo.com</p>
+								<a href="mailto:umarfoo@yahoo.com">umarfoo@yahoo.com</a>
 							</div>
 						</div>
 					</div>
