--- a/index.html
+++ b/index.html
@@ -899,7 +899,7 @@
 								</a>
 							</div>
 							<div class="mix col-md-6 col-lg-4 gallery-item cat-2 cat-5 cat-4">
-								<a href="ajax/portfolio-ajax-project-1.html" class="gallery-item-content pp">
+								<a href="ajax/portfolio-ajax-etl.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
 										<img src="assets/images/Tesla_ETL_main.jpg" alt="">
 										<div class="content-overlay">
@@ -1079,7 +1079,7 @@
 								</a>
 							</div>
 							<div class="mix col-md-6 col-lg-4 gallery-item cat-3 cat-4">
-								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
+								<a href="ajax/portfolio-ajax-belly-button.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
 										<img src="assets/images/belly_main.jpg" alt="">
 										<div class="content-overlay">
