--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@
 								</a>
 							</div>
 							<div class="mix col-md-6 col-lg-4 gallery-item cat-2">
-								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
+								<a href="ajax/portfolio-ajax-nba.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
 										<img src="assets/images/NBA_Main.jpg" alt="">
 										<div class="content-overlay">
