--- a/ajax/portfolio-ajax-etl.html
+++ b/ajax/portfolio-ajax-etl.html
@@ -28,7 +28,7 @@
           <span>Technologies:</span>Python, SQL, HTML & CSS
         </li>
         <li>
-          <span>Libraries:</span>Pandas, SQL Alchemy
+          <span>Libraries:</span>Pandas, SQL Alchemy, Splinter, Tweepy
         </li>
         <li>
           <span>Date:</span>July 26, 2020
