--- a/ajax/portfolio-ajax-nba.html
+++ b/ajax/portfolio-ajax-nba.html
@@ -35,7 +35,7 @@
         </li>
         <li>
           <span><a href="assets/images/NBA_Final-compressed.pdf" target="_blank">PROJECT PRESENTATION</a></span>
-          <span><a href="https://github.com/Mirgadir/Project1" target="_blank">GITHUB</a></span>
+          <span><a href="https://github.com/Umarfoo/NBA_2020_Predictions" target="_blank">GITHUB</a></span>
         </li>
       </ul>
       </div>
