--- a/index.html
+++ b/index.html
@@ -843,17 +843,17 @@
 						<div class="project-gallery-filter d-flex justify-content-center">
 							<ul class="project-gallery-menu d-inline-block">
 								<li class="filter active" data-filter="all">All</li>
-								<li class="filter" data-filter=".cat-1">Excel & VBA</li>
-								<li class="filter" data-filter=".cat-2">Python</li>
-								<li class="filter" data-filter=".cat-3">JavaScript</li>
-								<li class="filter" data-filter=".cat-4">HTML & CSS</li>
-								<li class="filter" data-filter=".cat-5">SQL & NoSQL</li>
-								<li class="filter" data-filter=".cat-6">Tableau</li>
-								<li class="filter" data-filter=".cat-7">Wordpress</li>
+								<li class="filter" data-filter=".excel">Excel & VBA</li>
+								<li class="filter" data-filter=".python">Python</li>
+								<li class="filter" data-filter=".javascript">JavaScript</li>
+								<li class="filter" data-filter=".html">HTML & CSS</li>
+								<li class="filter" data-filter=".sql">SQL & NoSQL</li>
+								<li class="filter" data-filter=".tableau">Tableau</li>
+								<li class="filter" data-filter=".wordpress">Wordpress</li>
 							</ul>
 						</div>
 						<div class="row project-gallery-item">
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-1">
+							<div class="mix col-md-6 col-lg-4 gallery-item excel">
 								<a href="ajax/portfolio-ajax-kick.html" class="gallery-item-content pp">
 									<div  class="item-thumbnail">
 										<img src="assets/images/Kickstarter_Main.jpg" alt="">
@@ -868,7 +868,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item  cat-1">
+							<div class="mix col-md-6 col-lg-4 gallery-item excel">
 								<a href="ajax/portfolio-ajax-stock.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
 										<img src="assets/images/Stock_Market_Main.jpg" alt="">
@@ -883,7 +883,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-2">
+							<div class="mix col-md-6 col-lg-4 gallery-item python">
 								<a href="ajax/portfolio-ajax-nba.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
 										<img src="assets/images/NBA_Main.jpg" alt="">
@@ -898,7 +898,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-2 cat-5 cat-4">
+							<div class="mix col-md-6 col-lg-4 gallery-item python sql html">
 								<a href="ajax/portfolio-ajax-etl.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
 										<img src="assets/images/Tesla_ETL_main.jpg" alt="">
@@ -913,7 +913,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-2 cat-3 cat-4 cat-5">
+							<div class="mix col-md-6 col-lg-4 gallery-item python javascript html sql">
 								<a href="ajax/portfolio-ajax-fire.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
 										<img src="assets/images/Fire_main.jpg" alt="">
@@ -928,7 +928,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-1 cat-2 cat-3 cat-4 cat-5 cat-6">
+							<div class="mix col-md-6 col-lg-4 gallery-item excel python javascript html sql tableau">
 								<a href="ajax/portfolio-ajax-billboard_dashboard.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
 										<img src="assets/images/billboard_main.jpg" alt="">
@@ -943,7 +943,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-2">
+							<div class="mix col-md-6 col-lg-4 gallery-item python">
 								<a href="ajax/portfolio-ajax-polls.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
 										<img src="assets/images/election_main.jpg" alt="">
@@ -958,7 +958,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-2">
+							<div class="mix col-md-6 col-lg-4 gallery-item python">
 								<a href="ajax/portfolio-ajax-video-game.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
 										<img src="assets/images/video_game_main.jpg" alt="">
@@ -973,7 +973,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-2">
+							<div class="mix col-md-6 col-lg-4 gallery-item python">
 								<a href="ajax/portfolio-ajax-pharma.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
 										<img src="assets/images/pharma_main.jpg" alt="">
@@ -988,7 +988,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-2">
+							<div class="mix col-md-6 col-lg-4 gallery-item python">
 								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
 										<img src="assets/images/vacation_main.jpg" alt="">
@@ -1003,7 +1003,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-2 cat-4 cat-5">
+							<div class="mix col-md-6 col-lg-4 gallery-item python html sql">
 								<a href="ajax/portfolio-ajax-mars.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
 										<img src="assets/images/mars_main.jpg" alt="">
@@ -1018,7 +1018,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-2 cat-5">
+							<div class="mix col-md-6 col-lg-4 gallery-item python sql">
 								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
 										<img src="assets/images/employees_main.jpg" alt="">
@@ -1033,7 +1033,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-2 cat-5">
+							<div class="mix col-md-6 col-lg-4 gallery-item python sql">
 								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
 										<img src="assets/images/climate_main.jpg" alt="">
@@ -1048,7 +1048,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-4">
+							<div class="mix col-md-6 col-lg-4 gallery-item html">
 								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
 										<img src="assets/images/temp_web_main.jpg" alt="">
@@ -1063,7 +1063,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-3 cat-4">
+							<div class="mix col-md-6 col-lg-4 gallery-item javascript html">
 								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
 										<img src="assets/images/et_main.jpg" alt="">
@@ -1078,7 +1078,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-3 cat-4">
+							<div class="mix col-md-6 col-lg-4 gallery-item javascript html">
 								<a href="ajax/portfolio-ajax-belly-button.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
 										<img src="assets/images/belly_main.jpg" alt="">
@@ -1093,7 +1093,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-3 cat-4">
+							<div class="mix col-md-6 col-lg-4 gallery-item javascript html">
 								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
 										<img src="assets/images/risk_main.jpg" alt="">
@@ -1108,7 +1108,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-3 cat-4">
+							<div class="mix col-md-6 col-lg-4 gallery-item javascript html">
 								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
 										<img src="assets/images/earthquake_main.jpg" alt="">
@@ -1123,7 +1123,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-6">
+							<div class="mix col-md-6 col-lg-4 gallery-item tableau">
 								<a href="ajax/portfolio-ajax-citi-bike.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
 										<img src="assets/images/citi_bike_main.jpg" alt="">
@@ -1138,7 +1138,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-4 cat-7">
+							<div class="mix col-md-6 col-lg-4 gallery-item html wordpress">
 								<a href="http://inflics.com/" target="_blank" class="gallery-item-content">
 									<div class="item-thumbnail">
 										<img src="assets/images/inflics_main.jpg" alt="">
@@ -1153,7 +1153,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-4 cat-7">
+							<div class="mix col-md-6 col-lg-4 gallery-item html wordpress">
 								<a href="http://advent-marine.com/" target="_blank" class="gallery-item-content">
 									<div class="item-thumbnail">
 										<img src="assets/images/advent_main.jpg" alt="">
@@ -1168,7 +1168,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-4 cat-7">
+							<div class="mix col-md-6 col-lg-4 gallery-item html wordpress">
 								<a href="http://smartship.solutions/" target="_blank" class="gallery-item-content">
 									<div class="item-thumbnail">
 										<img src="assets/images/smartship_main.jpg" alt="">
@@ -1183,7 +1183,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-4 cat-7">
+							<div class="mix col-md-6 col-lg-4 gallery-item html wordpress">
 								<a href="http://iffihairarts.com/" target="_blank" class="gallery-item-content">
 									<div class="item-thumbnail">
 										<img src="assets/images/iffi_main.jpg" alt="">
@@ -1198,7 +1198,7 @@
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item cat-4 cat-7">
+							<div class="mix col-md-6 col-lg-4 gallery-item html wordpress">
 								<a href="http://essrafi.com/" target="_blank" class="gallery-item-content">
 									<div class="item-thumbnail">
 										<img src="assets/images/essrafi_main.jpg" alt="">
