--- a/index.html
+++ b/index.html
@@ -1019,13 +1019,13 @@
 								</a>
 							</div>
 							<div class="mix col-md-6 col-lg-4 gallery-item python sql">
-								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
+								<a href="ajax/portfolio-ajax-employee.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
 										<img src="assets/images/employees_main.jpg" alt="">
 										<div class="content-overlay">
 											<div class="content">
 												<h4 class="project-title">
-													Employees Database Connection and Management
+													Employees Database Connection, Management & Analysis
 												</h4>
 												<span class="project-category">Python & SQL</span>
 											</div>
@@ -1034,7 +1034,7 @@
 								</a>
 							</div>
 							<div class="mix col-md-6 col-lg-4 gallery-item python sql">
-								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
+								<a href="ajax/portfolio-ajax-climateapi.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
 										<img src="assets/images/climate_main.jpg" alt="">
 										<div class="content-overlay">
@@ -1094,7 +1094,7 @@
 								</a>
 							</div>
 							<div class="mix col-md-6 col-lg-4 gallery-item javascript html">
-								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
+								<a href="ajax/portfolio-ajax-risk.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
 										<img src="assets/images/risk_main.jpg" alt="">
 										<div class="content-overlay">
@@ -1109,7 +1109,7 @@
 								</a>
 							</div>
 							<div class="mix col-md-6 col-lg-4 gallery-item javascript html">
-								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
+								<a href="ajax/portfolio-ajax-earthquake.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
 										<img src="assets/images/earthquake_main.jpg" alt="">
 										<div class="content-overlay">
