--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta property="og:image" content="https://umarfoo.github.io/assets/images/Umar_Farooq_PortFolio_Image.jpg">
 	<meta property="og:url" content="https://umarfoo.github.io">
 	<!-- favicon -->
-	<link rel="shortcut icon" href="assets/images/favicon.png">
+	<link rel="shortcut icon" href="assets/images/favicon_v2.png" type="image/x-icon">
 	<!-- animate css -->
 	<link rel="stylesheet" href="assets/css/animate.css">
 	<!-- bootstrap -->
