--- a/index.html
+++ b/index.html
@@ -1048,8 +1048,8 @@
 									</div>
 								</a>
 							</div>
-							<div class="mix col-md-6 col-lg-4 gallery-item html">
-								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
+							<div class="mix col-md-6 col-lg-4 gallery-item html python">
+								<a href="ajax/portfolio-ajax-temp-site.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
 										<img src="assets/images/temp_web_main.jpg" alt="">
 										<div class="content-overlay">
@@ -1057,16 +1057,16 @@
 												<h4 class="project-title">
 													Temperature vs Latitude Dashboard
 												</h4>
-												<span class="project-category">HTML & CSS</span>
+												<span class="project-category">Python, HTML & CSS</span>
 											</div>
 										</div>
 									</div>
 								</a>
 							</div>
 							<div class="mix col-md-6 col-lg-4 gallery-item javascript html">
-								<a href="ajax/portfolio-ajax-project-3.html" class="gallery-item-content pp">
+								<a href="ajax/portfolio-ajax-ufo.html" class="gallery-item-content pp">
 									<div class="item-thumbnail">
-										<img src="assets/images/et_main.jpg" alt="">
+										<img src="assets/images/ufo_main.jpg" alt="">
 										<div class="content-overlay">
 											<div class="content">
 												<h4 class="project-title">
