Updated recommendations page

--- a/index.html
+++ b/index.html
@@ -324,7 +324,9 @@
 						<div class="single-review">
 							<div class="reviewr">
 								<div class="img">
-									<img src="assets/images/haseeb.jpg" alt="">
+									<a href="https://www.linkedin.com/in/haseebsattar/" target="_blank">
+										<img src="assets/images/haseeb.jpg" alt="">
+									</a>
 								</div>
 								<div class="content">
 									<h4 class="name">
@@ -354,14 +356,16 @@
 						<div class="single-review">
 							<div class="reviewr">
 								<div class="img">
-									<img src="assets/images/asad.jpg" alt="">
+									<a href="https://www.linkedin.com/in/derrikdennis/" target="_blank">
+										<img src="assets/images/derrick.jpg" alt="">
+									</a>
 								</div>
 								<div class="content">
 									<h4 class="name">
-										Asad Zahid
+										Derrick Dennis
 									</h4>
 									<p>
-										CEO of Urban Apparel
+										Data Analyst
 									</p>
 								</div>
 							</div>
@@ -374,9 +378,9 @@
 							</div>
 							<div class="content">
 								<p>
-									Umar is a great problem solver. His quick thinking and ingenuity has helped us get out of many sticky situations.
-									While working with him, in personal and professional capacity, I can affirm that Umar is a dependable and innovative person, who will get the job done.
-									He is a big picture kind of person who always thinks about the benefit of the Company.
+									Umar and I attended the UT Ausitn Data Analysis and Visualization Bootcamp together.
+									During our time, Umar impressed me with his problem solving capabilities and his analytical skills. 
+									Whenever we presented team projects, I knew his group would have an outstanding presentation because of Umar’s tenacity and drive to take the project to the next level.
 								</p>
 							</div>
 						</div>
@@ -385,7 +389,9 @@
 						<div class="single-review">
 							<div class="reviewr">
 								<div class="img">
-									<img src="assets/images/yasmeen.jpg" alt="">
+									<a href="https://www.linkedin.com/in/yasmeen-ahsan-07445544/" target="_blank">
+										<img src="assets/images/yasmeen.jpg" alt="">
+									</a>
 								</div>
 								<div class="content">
 									<h4 class="name">
@@ -415,7 +421,9 @@
 						<div class="single-review">
 							<div class="reviewr">
 								<div class="img">
-									<img src="assets/images/mishaz.jpg" alt="">
+									<a href="https://www.linkedin.com/in/mishaz-mudassar-khawaja-53b6ba52/" target="_blank">
+										<img src="assets/images/mishaz.jpg" alt="">
+									</a>
 								</div>
 								<div class="content">
 									<h4 class="name">
@@ -445,7 +453,9 @@
 						<div class="single-review">
 							<div class="reviewr">
 								<div class="img">
-									<img src="assets/images/ali.jpg" alt="">
+									<a href="https://www.linkedin.com/in/syedaliabbas1/" target="_blank">
+										<img src="assets/images/ali.jpg" alt="">
+									</a>
 								</div>
 								<div class="content">
 									<h4 class="name">
@@ -467,6 +477,40 @@
 								<p>
 									Umar has always been a dependable team member who would bring great new ideas to the table. One of the good things about Umar was his approachability and communication.
 									He also has an uncanny ability to discover and analyse problem areas very quickly, and effectively communicate his ideas to all the stakeholders for quick resolution.
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<div class="single-review">
+							<div class="reviewr">
+								<div class="img">
+									<a href="https://www.linkedin.com/in/mirgadir-alakbarov/" target="_blank">
+										<img src="assets/images/miri.jpg" alt="">
+									</a>
+								</div>
+								<div class="content">
+									<h4 class="name">
+										Mirgadir
+									</h4>
+									<p>
+										Consultant Data Analyst
+									</p>
+								</div>
+							</div>
+							<div class="stars">
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+								<i class="fas fa-star"></i>
+							</div>
+							<div class="content">
+								<p>
+									Umar and I took the same Data Analytics and Visualization BootCamp together.
+									Umar is intelligent, polite, and willing to help everyone.
+									He would always take out time to spend with other students in class to help them understand the topic on which they are stuck.
+									He is a great problem solver and is able to quickly identify any issues with the code.
 								</p>
 							</div>
 						</div>
