updated work experience

--- a/index.html
+++ b/index.html
@@ -811,6 +811,24 @@
 										<div class="education-list">
 											<div class="single-education">
 												<h4 class="collage-name">
+													Tiger Pistol
+												</h4>
+												<p class="degree">Data Analyst SaaS<span class="year">2021 - Present</span>
+												</p>
+												<div class="description">
+													<p>
+														Develop interactive reports and dashboards in Tableau to represent platform data for clients and internal teams.
+													<br><br>
+														Use PostgreSQL and SQL Server to query the database for required data for Tableau Reports
+													<br><br>
+														Use PySpark Library in Python to develop scripts for automated reporting from platform to internal teams.
+													<br><br>
+														Develop predictive models using Python and Tableau to help clients understand their data and modify their inputs to achieve better results on the company’s platform.
+													</p>
+												</div>
+											</div>
+											<div class="single-education">
+												<h4 class="collage-name">
 													Habib Rafiq Pvt. Ltd.
 												</h4>
 												<p class="degree">Digital Marketing Manager <span class="year">2016 - 2020</span>
