--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
 										</div>
 										<div class="progress">
 											<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-												aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%"></div>
+												aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
 										</div>
 									</div>
 									<div class="single-skill">
@@ -1246,13 +1246,13 @@
 								</a>
 							</div>
 							<div class="mix col-md-6 col-lg-4 gallery-item html wordpress">
-								<a href="http://iffihairarts.com/" target="_blank" class="gallery-item-content">
+								<a href="https://tigerpistol.com/" target="_blank" class="gallery-item-content">
 									<div class="item-thumbnail">
-										<img src="assets/images/iffi_main.jpg" alt="">
+										<img src="assets/images/tigerpistol.jpg" alt="">
 										<div class="content-overlay">
 											<div class="content">
 												<h4 class="project-title">
-													iffihairarts.com
+													tigerpistol.com
 												</h4>
 												<span class="project-category">Wordpress, HTML & CSS</span>
 											</div>
